--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/guarded-eth-token-swapper"]
 	path = lib/guarded-eth-token-swapper
 	url = https://github.com/ryley-o/GuardedEthTokenSwapper.git
+[submodule "lib/chainlink-brownie-contracts"]
+	path = lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
